--- a/package.json
+++ b/package.json
@@ -16,8 +16,23 @@
     "author": "Alvaro S. P. Silva @alvarosps",
     "license": "ISC",
     "dependencies": {
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "@reduxjs/toolkit": "^1.9.5",
+        "crypto": "^1.0.1",
+        "crypto-browserify": "^3.12.0",
+        "css-loader": "^6.7.3",
+        "ethers": "^6.3.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-calendar": "^4.2.1",
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.0.5",
+        "react-router-dom": "^6.10.0",
+        "redux": "^4.2.1",
+        "redux-persist": "^6.0.0",
+        "stream-browserify": "^3.0.0",
+        "style-loader": "^3.3.2",
+        "web3": "^1.9.0"
     },
     "devDependencies": {
         "@babel/core": "^7.21.3",
@@ -44,8 +59,8 @@
         "jest": "^29.5.0",
         "prettier": "^2.8.4",
         "sass": "^1.59.3",
-        "sass-loader": "^13.2.0",
-        "webpack": "^5.76.2",
+        "sass-loader": "^13.2.2",
+        "webpack": "^5.80.0",
         "webpack-cli": "^5.0.1",
         "webpack-dev-server": "^4.12.0",
         "webpack-merge": "^5.8.0"
